--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ django-heroku==0.0.0
 django-redis==4.12.1
 djangorestframework==3.12.2
 idna==2.10
-psycopg
+psycopg2
 pytz==2020.5
 redis==3.5.3
 requests==2.25.1
