--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.1.5
 django-heroku==0.0.0
 django-redis==4.12.1
 djangorestframework==3.12.2
+gunicorn==20.0.4
 idna==2.10
 psycopg2
 pytz==2020.5
