--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,14 @@ djangorestframework==3.12.2
 gunicorn==20.0.4
 idna==2.10
 psycopg2
+pycrypto==2.6.1
+python-redis-lock==3.7.0
 pytz==2020.5
 redis==3.5.3
+redis-cache==0.1.5
+redis-structures==0.1.7
 requests==2.25.1
 sqlparse==0.4.1
 urllib3==1.26.2
+vital-tools==0.1.13
 whitenoise==5.2.0
