--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ dj-database-url==0.5.0
 Django==3.1.5
 django-heroku==0.0.0
 django-redis==4.12.1
+django-redis-cache==3.0.0
 djangorestframework==3.12.2
 gunicorn==20.0.4
 idna==2.10
-psycopg2
 pycrypto==2.6.1
 python-redis-lock==3.7.0
 pytz==2020.5
