--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-redis-cache==3.0.0
 djangorestframework==3.12.2
 gunicorn==20.0.4
 idna==2.10
+psycopg2
 pycrypto==2.6.1
 python-redis-lock==3.7.0
 pytz==2020.5
