--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2020.12.5
 chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.1.5
+django-cors-headers==3.7.0
 django-heroku==0.0.0
 django-redis==4.12.1
 django-redis-cache==3.0.0
